# home-school-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  schema.sql
app/: __init__.py  main.py
app/agent/: __init__.py  agent_graph.py  analysis_builder.py  graph.py  guardrail_checker.py  intent_router.py  mcp_agent.py  planner.py  prompt_builder.py  readonly_tool_planner.py  response_assembler.py  slot_extractor.py  tool_executor.py  tool_policy.py  tool_router.py
app/api/: __init__.py  agent_routes.py  student_routes.py
app/core/: __init__.py  config.py  logging.py  tracing.py
app/db/: engine.py  queries.py
app/llm/: __init__.py  chat_client.py
app/mcp_gateway/: __init__.py  gateway.py  schemas.py
app/memory/: __init__.py  service.py  session.py
app/models/: __init__.py  base.py
app/schemas/: __init__.py  agent.py  agent_contracts.py  response.py  student.py  tool.py
app/services/: __init__.py  agent_service.py  student_service.py
app/skills/: __init__.py  loader.py  registry.py  selector.py
app/tools/: __init__.py  homework_result.py  lesson_performance.py  recent_learning.py  student_profile.py  wrong_question.py
knowledge_base/academic_sop/: README.md  mvp_service_sop_placeholder.md
knowledge_base/curriculum/: README.md  math_grade5_mvp_seed.md  math_grade5_rag_expanded.md  (+3 more)
tests/: __init__.py  test_agent_graph.py  test_mcp_agent.py  test_mcp_http_server.py  test_memory_service.py  test_planner_skills_tools.py  test_session_memory.py  test_skeleton.py
web/: package-lock.json  package.json
(+36 files in other folders)
