[project]
name = "home-school-agent"
version = "0.1.0"
description = "Home-school communication Agent MVP"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "uvicorn[standard]>=0.38.0",
    "httpx>=0.28.0",
    "sqlalchemy>=2.0",
    "asyncmy>=0.2",
    "pydantic-settings>=2",
    "greenlet>=3.2.5",
]
