[project]
name = "home-school-agent"
version = "0.1.0"
description = "Home-school communication Agent MVP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.8",
    "uvicorn[standard]>=0.38.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2",
    "mcp>=1.23.0",
    "openai>=1.0",
    "langchain>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
